[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/Proyectiles/laserRed5.png" type="Texture" id=1]
[ext_resource path="res://Juego/Proyectiles/Proyectil.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.23596
height = 27.6917

[node name="Proyectil" type="Area2D"]
z_as_relative = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 2, 0.05, 0.05, 1 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.55389
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.999999, 2.38419e-07 )
scale = Vector2( 1.8, 0.5 )

[connection signal="area_entered" from="." to="." method="_on_Proyectil_area_entered"]
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="." to="." method="_onl_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
